--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <body>
+  <style>
+    div {
+  border-style: solid;
+  border-width: medium;
+}
+  </style>
   <script src="jsjava.min.js"></script>
   <h1>
   JSJava Playground
