--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 </h1>
   <textarea id="input"></textarea>
   <button onclick="submitCode()"> Run Code</button>
+  <hr></hr>
+<p> Result </p>
   <div id="result">
   
   </div>
