--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <h1>
   JSJava Playground
 </h1>
-  <textarea id="input"></textarea>
+<textarea id="input" style="margin: 0px; width: 646px; height: 398px;"></textarea>
   <button onclick="submitCode()"> Run Code</button>
   <hr></hr>
 <p> Result </p>
