--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ JSJava Editor
   <a class="save_button" onclick="document.querySelector('input').click();">
 Load
   </a>
-      <a class="save_button" id="run_btn" onclick="runCode(this)">
+      <a class="save_button" id="run_btn">
 Run
     </a>
     
